# pgs_copilot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pgs_copilot/: __init__.py  api.py  llm.py  processor.py  templates.py
tests/: __init__.py  test_api.py  test_llm.py  test_processor.py
