[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgs-copilot"
version = "1.0.0"
description = "A Streamlit-based companion tool for evaluating and comparing Polygenic Scores (PGS) across ancestry groups."
readme = "README.md"
authors = [
    { name = "Author", email = "author@example.com" }
]
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.20.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/precision-med"
"Bug Tracker" = "https://github.com/yourusername/precision-med/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgs_copilot*"]
